--- a/Demos/MyDemo/server/Server.csproj
+++ b/Demos/MyDemo/server/Server.csproj
@@ -33,8 +33,10 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Conn.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Serv.cs" />
     <Compile Include="Shared\core\action\ActionMainManager.cs" />
     <Compile Include="Shared\core\action\ActionManager.cs" />
     <Compile Include="Shared\core\action\BaseAction.cs" />
