--- a/Demos/VirtualDemo/LockStepVirtualDemo/Assembly-CSharp.csproj
+++ b/Demos/VirtualDemo/LockStepVirtualDemo/Assembly-CSharp.csproj
@@ -8,8 +8,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <ProjectGuid>{89D17E5D-84F8-2EA9-D9A6-C6BB41D86484}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
