add virtual interfaces

--- a/Demos/LockStepTankDemo/Assembly-CSharp.csproj
+++ b/Demos/LockStepTankDemo/Assembly-CSharp.csproj
@@ -104,14 +104,33 @@
     <Compile Include="Assets\PostProcessing\Runtime\Utils\GraphicsUtils.cs" />
     <Compile Include="Assets\PostProcessing\Runtime\Utils\MaterialFactory.cs" />
     <Compile Include="Assets\PostProcessing\Runtime\Utils\RenderTextureFactory.cs" />
-    <Compile Include="Assets\Scripts\Camera\CameraControl.cs" />
-    <Compile Include="Assets\Scripts\Managers\GameManager.cs" />
-    <Compile Include="Assets\Scripts\Managers\TankManager.cs" />
-    <Compile Include="Assets\Scripts\Shell\ShellExplosion.cs" />
-    <Compile Include="Assets\Scripts\Tank\TankHealth.cs" />
-    <Compile Include="Assets\Scripts\Tank\TankMovement.cs" />
-    <Compile Include="Assets\Scripts\Tank\TankShooting.cs" />
-    <Compile Include="Assets\Scripts\UI\UIDirectionControl.cs" />
+    <Compile Include="Assets\Scripts\Actions\GeneralActions\GameStartAction.cs" />
+    <Compile Include="Assets\Scripts\Actions\GeneralActions\PlayerInitAction.cs" />
+    <Compile Include="Assets\Scripts\Actions\IAction.cs" />
+    <Compile Include="Assets\Scripts\Actions\LockStepActions\ForwardAction.cs" />
+    <Compile Include="Assets\Scripts\Actions\LockStepActions\NoAction.cs" />
+    <Compile Include="Assets\Scripts\Base\Singleton.cs" />
+    <Compile Include="Assets\Scripts\GameScripts\Camera\CameraControl.cs" />
+    <Compile Include="Assets\Scripts\GameScripts\Managers\GameManager.cs" />
+    <Compile Include="Assets\Scripts\GameScripts\Managers\TankManager.cs" />
+    <Compile Include="Assets\Scripts\GameScripts\Shell\ShellExplosion.cs" />
+    <Compile Include="Assets\Scripts\GameScripts\Tank\TankHealth.cs" />
+    <Compile Include="Assets\Scripts\GameScripts\Tank\TankMovement.cs" />
+    <Compile Include="Assets\Scripts\GameScripts\Tank\TankShooting.cs" />
+    <Compile Include="Assets\Scripts\GameScripts\UI\UIDirectionControl.cs" />
+    <Compile Include="Assets\Scripts\Interfaces\IGeneralAction.cs" />
+    <Compile Include="Assets\Scripts\Interfaces\ILockStepAction.cs" />
+    <Compile Include="Assets\Scripts\Interfaces\IVirtualManager.cs" />
+    <Compile Include="Assets\Scripts\Interfaces\IVirtualServer.cs" />
+    <Compile Include="Assets\Scripts\LockStep\ConfirmedActions.cs" />
+    <Compile Include="Assets\Scripts\LockStep\Fix64.cs" />
+    <Compile Include="Assets\Scripts\LockStep\IHasGameFrame.cs" />
+    <Compile Include="Assets\Scripts\LockStep\LockStepManager.cs" />
+    <Compile Include="Assets\Scripts\LockStep\PendingActions.cs" />
+    <Compile Include="Assets\Scripts\LockStep\SRandom.cs" />
+    <Compile Include="Assets\Scripts\Virtual\VirtualClient.cs" />
+    <Compile Include="Assets\Scripts\Virtual\VirtualManager.cs" />
+    <Compile Include="Assets\Scripts\Virtual\VirtualServer.cs" />
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
     <None Include="Assets\PostProcessing\Resources\Shaders\DepthOfField.shader" />
     <None Include="Assets\PostProcessing\Resources\Shaders\MotionBlur.cginc" />
